<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/netname" />

    <EditText
        android:id="@+id/netssid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/netpwd" />

    <EditText
        android:id="@+id/netpwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:id="@+id/tester_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/scan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="Scan" />

        <Button
            android:id="@+id/btn_stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="14dp"
            android:text="@string/stop" />

        <Button
            android:id="@+id/btn_create"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/btn_stop"
            android:text="@string/create" />

        <Button
            android:id="@+id/btn_connect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_create"
            android:paddingLeft="20px"
            android:paddingRight="20px"
            android:text="@string/connect" />

        <Button
            android:id="@+id/disconnect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/btn_create"
            android:layout_below="@+id/btn_create"
            android:layout_marginRight="20dp"
            android:text="Disconnect" />

        <Button
            android:id="@+id/forget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/btn_connect"
            android:layout_alignBottom="@+id/btn_connect"
            android:layout_toRightOf="@+id/btn_connect"
            android:text="Forget" />

        <Button
            android:id="@+id/test"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/disconnect"
            android:layout_alignBottom="@+id/disconnect"
            android:layout_alignRight="@+id/btn_stop"
            android:text="@string/test" />

    </RelativeLayout>

    <EditText
        android:id="@+id/txv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="false"
        android:ems="10"
        android:inputType="none"
        android:isScrollContainer="true"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:scrollbars="horizontal|vertical" />

</LinearLayout>